--- a/templates/local-am62x.conf.sample
+++ b/templates/local-am62x.conf.sample
@@ -176,5 +176,7 @@ BUILDHISTORY_COMMIT = "1"
 
 EXTRA_IMAGE_FEATURES:append = " dev-pkgs tools-sdk tools-debug tools-sdk"
 
-#IMAGE_INSTALL:append = " python3 python3-numpy python3-pip python3-pyserial python3-websockets python3-aiohttp"
-#IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
+IMAGE_INSTALL:append = " python3 python3-numpy python3-pip python3-pyserial python3-websockets python3-aiohttp"
+IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
+
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "kernel-modules"
