Changed to WARP and tweaked added packages

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -36,7 +36,7 @@
 #MACHINE ?= "genericx86"
 #MACHINE ?= "genericx86-64"
 
-MACHINE ?= "myd-am62x"
+MACHINE ?= "warp-am62x"
 
 # This sets the default machine to be qemux86-64 if no other machine is selected:
 #MACHINE ??= "qemux86-64"
@@ -294,6 +294,18 @@ CONF_VERSION = "2"
 
 # BBINCLUDELOGS = "yes"
 
-EXTRA_IMAGE_FEATURES = "debug-tweaks dev-pkgs tools-sdk tools-debug tools-sdk"
-IMAGE_INSTALL:append = "python3 python3-numpy python3-fastapi python3-pip python3-pyserial python3-uvicorn python3-websockets python3-aiohttp"
-IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
+EXTRA_IMAGE_FEATURES = "debug-tweaks"
+# development stuff
+#EXTRA_IMAGE_FEATURES:append = " dev-pkgs tools-sdk tools-debug tools-sdk"
+
+IMAGE_INSTALL:append = "kernel-modules"
+
+# Python stuff
+#IMAGE_INSTALL:append = " python3 python3-numpy python3-fastapi python3-pip python3-pyserial python3-uvicorn python3-websockets python3-aiohttp"
+#IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
+
+# Misc stuff
+IMAGE_INSTALL:append = " openssh cmake e2fsprogs elfutils i2c-tools make strace gdb nano"
+
+
+
