--- a/templates/local-am62x.conf.sample
+++ b/templates/local-am62x.conf.sample
@@ -147,7 +147,7 @@ PATCHRESOLVE = "noop"
 # allowed.
 #
 
-DISTRO = "poky"
+DISTRO = "proxima"
 
 # Set terminal types by default it expects gnome-terminal
 # but we chose xterm
@@ -178,12 +178,19 @@ EXTRA_IMAGE_FEATURES = "debug-tweaks"
 # development stuff
 #EXTRA_IMAGE_FEATURES:append = " dev-pkgs tools-sdk tools-debug tools-sdk"
 
-IMAGE_INSTALL:append = " kernel-modules rt-tests"
+IMAGE_INSTALL:append = " kernel-modules rt-tests mmc-utils"
 
 # Python stuff
 #IMAGE_INSTALL:append = " python3 python3-numpy python3-fastapi python3-pip python3-pyserial python3-uvicorn python3-websockets python3-aiohttp"
 #IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
 
 # Misc stuff
-IMAGE_INSTALL:append = " openssh cmake e2fsprogs elfutils i2c-tools make strace gdb nano"
+IMAGE_INSTALL:append = " openssh cmake e2fsprogs-resize2fs elfutils i2c-tools make strace gdb nano git"
+IMAGE_INSTALL:append = " util-linux core-utils psutils ntp-utils"
+IMAGE_INSTALL_append = " tzdata"
 
+IMAGE_INSTALL_append = " burn-emmc-full"
+
+
+
+DEFAULT_TIMEZONE = "America/New_York"
