--- a/templates/local-am62x.conf.sample
+++ b/templates/local-am62x.conf.sample
@@ -174,23 +174,34 @@ BB_HASHSERVE = "auto"
 INHERIT += "buildhistory"
 BUILDHISTORY_COMMIT = "1"
 
-EXTRA_IMAGE_FEATURES = "debug-tweaks"
-# development stuff
-#EXTRA_IMAGE_FEATURES:append = " dev-pkgs tools-sdk tools-debug tools-sdk"
 
+DISTRO_FEATURES:append = " virtualization"
+
+DEFAULT_TIMEZONE = "America/New_York"
+
+EXTRA_IMAGE_FEATURES = "debug-tweaks"
+
+# development stuff
+EXTRA_IMAGE_FEATURES:append = " dev-pkgs tools-sdk tools-debug tools-sdk"
 IMAGE_INSTALL:append = " kernel-modules rt-tests mmc-utils"
 
 # Python stuff
 #IMAGE_INSTALL:append = " python3 python3-numpy python3-fastapi python3-pip python3-pyserial python3-uvicorn python3-websockets python3-aiohttp"
 #IMAGE_INSTALL:append = " python3-configargparse python3-gunicorn python3-matplotlib python3-pycurl"
 
-# Misc stuff
+# Misc utils
 IMAGE_INSTALL:append = " openssh cmake e2fsprogs-resize2fs elfutils i2c-tools make strace gdb nano git"
-IMAGE_INSTALL:append = " util-linux core-utils psutils ntp-utils"
-IMAGE_INSTALL_append = " tzdata"
+IMAGE_INSTALL:append = " util-linux psutils ntp netcat tcpdump"
+IMAGE_INSTALL:append = " tzdata"
 
-IMAGE_INSTALL_append = " burn-emmc-full"
+# docker
+IMAGE_INSTALL:append = " docker-moby"
+
+# web stuff
+# IMAGE_INSTALL:append = " nginx"
+
+# custom progs
+IMAGE_INSTALL:append = " burn-emmc-full"
 
 
 
-DEFAULT_TIMEZONE = "America/New_York"
