Tweaking time zone and distro features

--- a/templates/local-am62x.conf.sample
+++ b/templates/local-am62x.conf.sample
@@ -175,8 +175,9 @@ INHERIT += "buildhistory"
 BUILDHISTORY_COMMIT = "1"
 
 EXTRA_IMAGE_FEATURES = "debug-tweaks"
+DISTRO_FEATURES:append = " virtualization"
 
-
+DEFAULT_TIMEZONE = "America/New_York"
 
 
 
